--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
+    padding: 0;
     font-family: "Quicksand", serif;
+    overflow: hidden;
 }
 
 .navbar {
@@ -53,15 +55,18 @@ li {
     width: 100%;
     background-color: #D9EFDF;
     height: 600px;
+    margin: 0;
+    padding: 0;
     overflow: auto;
 }
 
-/*.section2, .section4 {
+.section2 {
     width: 100%;
-    background-color: #8DCBA0;
+    background-color: #E5F3E9;
+    overflow: auto;
     height: 600px;
+    margin: 0;
 }
-    */
 
 .profile{
     height: 350px;
@@ -76,14 +81,15 @@ li {
     font-weight: 400;
     margin-top: 120px;
     margin-left: 485px;
-        margin-right: 150px 
+    margin-right: 150px; 
+    position: absolute;
 }
 
 .vertical-bar {
     width: 8px;
-    height: 100px;
+    height: 130px;
     background-color: #8DCBA0;
-    margin-bottom: 1000px;
+    margin-top: 190px;
     margin-left: 90%;
     border-radius: 10px;
 }
